# rw-parser-rs

./: .gitignore  Cargo.toml  README.md
benches/: dff_parser_benchmark.rs
src/: lib.rs
src/renderware/: mod.rs  rw_file.rs  rw_sections.rs
src/renderware/common/: types.rs
src/renderware/dff/: dff_model_type.rs  dff_parser.rs  mod.rs
src/renderware/ifp/: ifp_parser.rs  mod.rs
src/renderware/txd/: mod.rs  txd_parser.rs
src/renderware/utils/: image_format_enums.rs  mod.rs
src/utils/: byte_stream.rs  mod.rs  rw_version.rs
