[package]
name = "rw-parser-rs"
version = "1.0.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
texpresso = "2.0.2"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "dff_parser_benchmark"
harness = false
