[package]
name = "rw-parser-rs"
version = "1.0.0"
edition = "2024"
description = "A high-performance, native Rust parser for RenderWare files (.dff, .txd, .ifp)."
license = "GPL-3.0"
repository = "https://github.com/DepsCian/rw-parser-rs"
homepage = "https://github.com/DepsCian/rw-parser-rs"
documentation = "https://docs.rs/rw-parser-rs"

[dependencies]
byteorder = "1.5.0"
num = "0.4.3"
num-derive = "0.4.2"
num-traits = "0.2.19"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
texpresso = "2.0.2"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "dff_parser_benchmark"
harness = false
